syntax = "proto3";

package io.mystore.stock.entity;

import "google/protobuf/timestamp.proto";

message StockSkuItemState {
  string stock_sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  string order_id = 4;
  string order_sku_item_id = 5;
  google.protobuf.Timestamp shipped_utc = 6;
  string stock_order_id = 7;
}

message StockSkuItemCreated {
  string stock_sku_item_id = 1;
  string sku_id = 2;
  string sku_name = 3;
  string stock_order_id = 4;
}

message OrderRequestedJoinToStockAccepted {
  string sku_id = 1;
  string stock_sku_item_id = 2;
  string order_id = 3;
  string order_sku_item_id = 4;
  google.protobuf.Timestamp shipped_utc = 5;
  string stock_order_id = 6;
}

message OrderRequestedJoinToStockRejected {
  string sku_id = 1;
  string stock_sku_item_id = 2;
  string order_id = 3;
  string order_sku_item_id = 4;
  string stock_order_id = 5;
}

message StockRequestedJoinToOrder {
  string sku_id = 1;
  string stock_sku_item_id = 2;
  string stock_order_id = 3;
}

message StockRequestedJoinToOrderAccepted {
  string sku_id = 1;
  string stock_sku_item_id = 2;
  string order_id = 3;
  string order_sku_item_id = 4;
  google.protobuf.Timestamp shipped_utc = 5;
  string stock_order_id = 6;
}

message StockRequestedJoinToOrderRejected {
  string sku_id = 1;
  string stock_sku_item_id = 2;
  string order_id = 3;
  string order_sku_item_id = 4;
  string stock_order_id = 5;
}
